--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,6 +6,10 @@
 	</head>
 
 	<body>
+		<h1>Total a pagar:</h1>
+		<div id='result'>
+
+		</div>
 
 		<script src="js/scripts.js"></script>
 	</body>
