--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,116 +1,116 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Blog de Viajes</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <head>
+        <meta charset="utf-8">
+        <title>Travel Blog</title>
+        <link rel="stylesheet" href="css/styles.css">
 
-  </head>
-  <body>
-    <header>
-        <div class="contenedor">
-            <div id="logo" class="logo">
-                <img src="img/logo.png">
-            </div> <!--.logo-->
+    </head>
 
-            <div class="buscador">
-              <form class="formulario" action="index.html" method="post">
-                    <label for="buscador">
-                        <input type="search" id="buscador" name="buscador" placeholder="Buscar">
-                    </label>
-                    <input type="submit" id="buscar" class="buscador" value="Buscar">
-              </form>
-            </div>
-        </div> <!--.contenedor-->
-    </header>
-    <div id="navegacion" class="navegacion">
-        <nav id="menu">
-            <ul class="clearfix">
-                <li><a target="_blank" href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a>
-                  <ul>
-                    <li><a href="#">Mision</a></li>
-                    <li><a href="#">Vision</a></li>
-                    <li><a href="#">Valores</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Blog</a>
-                    <ul>
-                      <li><a href="#">Consejos</a></li>
-                      <li><a href="#">Ciudades</a></li>
-                      <li><a href="#">Promociones</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Tienda</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-    </div>
+    <body>
+        <header>
+            <div class="container">
+                <div id="logo" class="logo">
+                    <img src="img/logo.png">
+                </div> <!--.logo-->
 
-    <div id="contenido" class="contenido">
-        <main>
-            <article>
-                <h2>Viajar a Londres</h2>
-                <img src="img/imagen_1.jpg" alt="visitar londres">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#" class="boton">Leer más</a>
-            </article>
-            <article>
-                <h2>Puente de la Torre</h2>
-                <img src="img/imagen_2.jpg" alt="puente de la torre">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#" class="boton">Leer más</a>
-            </article>
-            <article>
-                <h2>Metro de Londres</h2>
-                <img src="img/imagen_3.jpg" alt="metro de londres">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#" class="boton">Leer más</a>
-            </article>
-        </main>
+                <div class="searcher">
+                    <form class="form" action="index.html" method="post">
+                        <label for="searcher">
+                            <input type="search" id="searcher" name="searcher" placeholder="search">
+                        </label>
+                        <input type="submit" id="search" class="searcher" value="search">
+                    </form>
+                </div>
+            </div> <!--.container-->
+        </header>
 
-        <aside id="sidebar" class="sidebar">
-            <h2>Otros posts</h2>
-            <ul>
-              <li><a href="#">Entrada 1</a></li>
-              <li><a href="#">Entrada 2</a></li>
-              <li><a href="#">Entrada 3</a></li>
-              <li><a href="#">Entrada 4</a></li>
-              <li><a href="#">Entrada 5</a></li>
-            </ul>
-        </aside>
-    </div> <!--contenido-->
-
-
-    <footer>
-
-      <div class="contenedor">
-          <div class="nosotros">
-              <h2>Sobre nosotros</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-          </div>
-          <div class="menu navegacion">
-            <h2>Menú de navegación</h2>
-            <nav>
-              <a href="#">Inicio</a>
-              <a href="#">Nosotros</a>
-              <a href="#">Blog</a>
-              <a href="#">Tienda</a>
-              <a href="#">Contacto</a>
+        <div id="navigation" class="navigation">
+            <nav id="menu">
+                <ul class="clearfix">
+                    <li><a target="_blank" href="#">Home</a></li>
+                    <li><a href="#">About</a>
+                        <ul>
+                            <li><a href="#">Mission</a></li>
+                            <li><a href="#">Vision</a></li>
+                            <li><a href="#">Values</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Blog</a>
+                        <ul>
+                            <li><a href="#">Tips</a></li>
+                            <li><a href="#">Cities</a></li>
+                            <li><a href="#">Promos</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Store</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </nav>
-          </div>
-      </div>
+        </div>
 
-      <p class="copyright">
-          Todos los derechos reservados &copy;. Blog de Viajes 2016
-      </p>
-    </footer>
-    <script src="js/scripts.js"></script>
+        <div id="content" class="content">
+            <main>
+                <article>
+                    <h2>Travel to London</h2>
+                    <img src="img/imagen_1.jpg" alt="travel to london">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a href="#" class="button">Read more</a>
+                </article>
+                <article>
+                    <h2>Tower Bridge</h2>
+                    <img src="img/imagen_2.jpg" alt="tower bridge">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a href="#" class="button">Read more</a>
+                </article>
+                <article>
+                    <h2>London Underground</h2>
+                    <img src="img/imagen_3.jpg" alt="london underground">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a href="#" class="button">Read more</a>
+                </article>
+            </main>
 
-  </body>
+            <aside id="sidebar" class="sidebar">
+                <h2>Other posts</h2>
+                <ul>
+                <li><a href="#">Entry 1</a></li>
+                <li><a href="#">Entry 2</a></li>
+                <li><a href="#">Entry 3</a></li>
+                <li><a href="#">Entry 4</a></li>
+                <li><a href="#">Entry 5</a></li>
+                </ul>
+            </aside>
+        </div> <!--content-->
+
+        <footer>
+            <div class="container">
+                <div class="about">
+                    <h2>About us</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="menu navigation">
+                    <h2>Navigation menu</h2>
+                    <nav>
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Store</a>
+                    <a href="#">Contact</a>
+                    </nav>
+                </div>
+            </div>
+
+            <p class="copyright">
+                All rights reserved &copy;. Travel Blog 2018
+            </p>
+        </footer>
+
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
